--- a/pokemon.html
+++ b/pokemon.html
@@ -1,84 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <style>
-         body{
-           background-color: #333;
-           overflow: hidden;
-       }
-       .logo{
-        display: block;
-        margin: auto;
-        margin-bottom: 20px;
-        width: 250px;
-        height: 100px;
-       }
-       .contenedor{
-           text-align: center;
-           margin: 0 auto;
-           height: 300px;
-           width: 350px;
-           display: flex;
-           justify-content: center;
-           align-content: center;
-           flex-direction: column;
-       }
-       .contenedor input{
-           text-align: center;
-       }
-       .contenedor button{
-           margin-top: 20px;
-           margin-bottom: -30px;
-       }
-       .pokemon{
-           width: 150px;
-           height: 150px;
-           margin: 40px auto;
-           display: inline-block;
-       }
-       p{
-           margin-top: -60px;
-       }
-    </style>
-</head>
-<body>
-  
-</div>
-<img src="logo2.png" class="logo" alt="">
-<div class="contenedor">
-    <input type="text" id="caja" placeholder="Ingrese Un Numero">
-    <button class="text-white btn bg-danger" id="button">Buscar</button>
-    <img src="" id="img" class="pokemon" alt="">
-    <p id="info" class="text-white"></p>
-</div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Api-pokemon</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    </head>
+    <body style="background: gainsboro">
 
-    <script>
-        let buton=document.getElementById('button')
+        <div class="container" align="center" style="margin-top: 200px" >
 
-        buton.addEventListener('click',()=>{
-            let caja=document.getElementById('caja').value
-            let img=document.getElementById('img')
-            let p=document.getElementById('info')
-            let xhttp=new XMLHttpRequest()
-            xhttp.open("GET",`https://pokeapi.co/api/v2/pokemon/${caja}`)
-            xhttp.send()
+            <div class="card" style="width: 32rem; height: 34rem">
 
-            xhttp.onreadystatechange=function () {
-                if(this.readyState==4 && this.status==200)
-                {
-                let datoPokemon=JSON.parse( this.responseText)
-                console.log(datoPokemon)
-                img.setAttribute("src",datoPokemon.sprites.front_default)
-                p.textContent=datoPokemon.name
+                <img class="card-img-top" src="logo2.png" alt="Card image cap">
+
+                <div class="card-body">
+
+                    <h5 class="card-title"> Buscador de pokemon </h5>
+
+                    <input class="form-control"  type="text" id="caja" placeholder="Ingresa nombre de pokemon / numero < 898" />
+
+                    <button id="button" class="btn btn-info btn-block"> Buscar </button>
+
+                    <img src="" id="img" class="pokemon" alt="">
+
+                    <p id="info" class="text-black-50"></p>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <script>
+            let buton = document.getElementById( 'button' ) //almacemanos en variable boton usando el metodo para devulver el ojeto con el id coincidente
+
+            buton.addEventListener( 'click', () => {    // a la var boton mandamos a llamar el evento
+                let caja = document.getElementById( 'caja' ).value   //captura de la caja de texto
+                let img = document.getElementById( 'img' )      // capturamos la imagen
+                let p = document.getElementById( 'info' )      // capturamos el parrafo de resultado
+                let xhttp = new XMLHttpRequest()
+                xhttp.open("GET",`https://pokeapi.co/api/v2/pokemon/${caja}`)    //optenemos los datos mediante ajax usando el metodo get
+                xhttp.send()   /// enviamos los tados
+
+                xhttp.onreadystatechange = function () {   //con ayuda del metodo..  generamos el cambio de estado
+                    if( this.readyState == 4 && this.status == 200 )   //realizamos la comprobacion de estado
+                    {
+                    let datoPokemon = JSON.parse( this.responseText )  ///convertimos los datos  json
+                    console.log( datoPokemon )
+                    img.setAttribute( "src", datoPokemon.sprites.front_default )  // cambiamos el atrobuto src de la imagen
+                    p.textContent = datoPokemon.name   //captura el nombre del poquemosn
+                    }
                 }
-            }
 
-        })
-    </script>
+            })
+        </script>
 
-</body>
+    </body>
 </html>
