--- a/pokemon.html
+++ b/pokemon.html
@@ -12,7 +12,7 @@
 
             <div class="card" style="width: 32rem; height: 34rem">
 
-                <img class="card-img-top" src="logo2.png" alt="Card image cap">
+                <img class="card-img-top" src="pokemon.png" alt="Card image cap">
 
                 <div class="card-body">
 
